syntax = "proto3";

option go_package = "github.com/ricxi/flat-list/pb";

package pb;

message Request {
    string user_id = 1;
}

message Response {
    string activation_token = 1;
}

service Token{
    rpc CreateActivationToken(Request) returns (Response);
}